:ambulance: fix(works): fix align slider elements on top on mobile

--- a/src/components/WorksSection/WorksItem/WorksItem.scss
+++ b/src/components/WorksSection/WorksItem/WorksItem.scss
@@ -1,4 +1,6 @@
 .works-item {
+  align-self: flex-start;
+
   &__illustration {
       width: 37.5rem;
       height: 37.5rem;
